--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
   width: 75%;
   float: left;
   padding-right: 30px;
+  position: relative;
 }
 
 .blog-post img{
@@ -23,6 +24,11 @@ body {
     width: auto;
   }
 
+.date {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+}
 .other-posts {
   width: 25%;
   float: left;
