--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -25,7 +25,6 @@ h2,
 h3 {
   font-weight: 300;
   text-transform: uppercase;
-  
 }
 h1 {
   margin-top: 0;
@@ -159,14 +158,53 @@ header {
   padding: 1%;
 }
 
-.box p{
-    font-size: 90%;
-    line-height: 145%;
+.box p {
+  font-size: 90%;
+  line-height: 145%;
 }
 
-.icon-big{
-    font-size: 350%;
-    display: block;
-    color: #e67e22;
-    margin-bottom: 10px;
+.icon-big {
+  font-size: 350%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px;
+}
+
+/*==================MEALSSHOWCASE============*/
+.section-meals {
+  padding: 0;
+}
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+}
+
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #000;
+}
+.meal-photo img {
+  opacity: 0.7;
+  width: 100%;
+  height: auto;
+  transform: scale(1.15);
+  transition: transform 0.5s opacity 0.5s;
+}
+.meal-photo img:hover {
+  opacity: 1;
+  transform: scale(1.03);
+  transition: transform 0.5s;
+}
+
+/*================FEATURE===============*/
+.section-features .long-copy {
+  margin-bottom: 30px;
 }
