--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -54,6 +54,31 @@ h3 {
   font-size: 110%;
   margin-bottom: 16px;
 }
+
+.twitter:link,
+.twitter:visited {
+  color: #e67e22 !important;
+  text-decoration: none;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #e67e22;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+
+.twitter:hover .twitter:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
+}
+
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
 /*============PARAGRAPH===================*/
 .long-copy {
   line-height: 145%;
@@ -116,6 +141,7 @@ header {
   height: 100vh;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 .logo {
   height: 100px;
@@ -184,7 +210,6 @@ header {
   float: left;
   width: 25%;
 }
-
 .meal-photo {
   width: 100%;
   margin: 0;
@@ -207,4 +232,92 @@ header {
 /*================FEATURE===============*/
 .section-features .long-copy {
   margin-bottom: 30px;
+}
+
+/*================WORK===========*/
+.section-steps {
+  background-color: #f4f4f4;
+}
+
+.steps-box {
+  margin-top: 30px;
+}
+.steps-box:first-child {
+  text-align: right;
+  padding-right: 3%;
+  margin-top: 30px;
+}
+.steps-box:last-child {
+  padding-left: 3px;
+  margin-top: 70px;
+}
+.app-screen {
+  width: 40%;
+}
+.works-step {
+  margin-bottom: 50px;
+}
+
+.works-step:last-of-type {
+  margin-bottom: 80px;
+}
+
+.works-step div {
+  color: #e67e22;
+  border: 2px solid #e67e22;
+  display: inline-block;
+  border-radius: 50%;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  padding: 5px;
+  float: left;
+  font-size: 150%;
+  margin-right: 25px;
+}
+
+.btn-app img {
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
+}
+.btn-app:link .btn-app:visited {
+  border: 0;
+}
+/*=======================CITIES============*/
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+  margin-right: 10px;
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -5px;
+}
+.cities-box {
+  text-align: justify;
+  padding: 1%;
+}
+.cities-box img {
+  height: auto;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.city-feature {
+  margin-bottom: 5px;
+}
+
+/*=================FEEDBACK================*/
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/back-customers.jpg");
+  background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
+}
+
+.testimonials-content {
+
 }
