--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -96,7 +96,8 @@ h3 {
 
 /*============BUTTON=====================*/
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline;
   padding: 10px 30px;
   font-weight: 300;
@@ -107,7 +108,8 @@ h3 {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit]{
   background-color: #e67e22;
   border: 1px solid #e67e22;
   color: #fff;
@@ -125,7 +127,9 @@ h3 {
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active, 
+input[type=submit]:hover,
+input[type=submit]:active{
   background-color: #cf6d17;
 }
 .btn-ghost:hover,
@@ -312,12 +316,103 @@ header {
 
 /*=================FEEDBACK================*/
 .section-testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/back-customers.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("img/back-customers.jpg");
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
 }
 
 .testimonials-content {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  position: relative;
+  margin-top: 45px;
+}
 
+.testimonials-content:before {
+  content: "\201C";
+  font-size: 400%;
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: -5px;
+}
+cite {
+  font-size: 90%;
+  margin-top: 25px;
+  display: block;
+}
+cite img {
+  height: 45px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+/*==================BORDER=============*/
+.section-plans {
+  background-color: #f4f4f4;
+}
+.price-box {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  text-align: justify;
+  box-shadow: 0 2px 2px #e3e3e3;
+}
+.price-box div {
+  padding: 15px;
+  border-bottom: 1px solid #e8e8e8;
+}
+.price-box div:first-child{
+ background-color:#fcfcfc;
+ border-top-left-radius: 5px;
+ border-top-right-radius: 5px;
+}
+.price-box div:last-child{
+  text-align: center;
+  border: 0;
+}
+.plan-price {
+  font-size: 300%;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #e67e22;
+}
+.plan-price span{
+  font-size: 30%;font-weight: 300;
+
+}
+.plan-price-meal {
+  font-size: 80%;
+}
+.price-box ul{
+  list-style: none;
+}
+.price-box ul li{
+  padding: 5px 0;
+}
+
+/*=============FORM=================*/
+.contact-form{
+  width: 60%;
+  margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea{
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+input[type=checkbox]{
+  margin: 10px 3px 10px 0;
+}
+*:focus{
+  outline: none;
 }
