--- a/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
+++ b/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+}
+
+.container {
+  width: 700px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
 h1,
 h2,
 h3,
@@ -13,7 +27,9 @@ h2,
 h3 {
   color: #1098ad;
 }
-
+article {
+  margin-bottom: 60px;
+}
 h1 {
   font-size: 26px;
   text-transform: uppercase;
@@ -22,10 +38,12 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 h3 {
   font-size: 30px;
   font-family: sans-serif;
+  margin-top: 40px;
 }
 h4 {
   font-size: 20px;
@@ -35,10 +53,12 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
 }
 /* 
 footer p {
@@ -65,15 +85,16 @@ footer p {
 
 .main-header {
   background-color: #f7f7f7;
+  padding: 20px 40px;
+  height: 80px;
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-}
-
-body {
+  padding: 50px 0;
+  width: 500px;
 }
 
 /* .first-li {
@@ -85,6 +106,7 @@ li:first-child {
 }
 li:last-child {
   font-style: italic;
+  margin-bottom: 0;
 }
 /* li:nth-child(2) {
   color: red;
@@ -108,4 +130,18 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+.post-header {
+  margin-bottom: 40px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
 }
