--- a/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
+++ b/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
@@ -3,6 +3,7 @@
   padding: 0;
 }
 body {
+  position: relative;
 }
 
 .container {
@@ -10,6 +11,7 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  /* position: relative; */
 }
 
 h1,
@@ -86,7 +88,7 @@ footer p {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 aside {
@@ -144,4 +146,27 @@ ol {
 .post-image {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
 }
