--- a/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
+++ b/Omnifood/new-version/HTML-Fundamentals/style/main-style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  width: 700px;
+  width: 798px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -169,4 +169,31 @@ button {
   position: absolute;
   right: 50px;
   bottom: 50px;
+}
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+h2::first-letter {
+  /* font-size: 80px; */
+}
+
+h3 + p::first-line {
+  /* color: red; */
+}
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  font-size: 16px;
+  color: #000;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
 }
