--- a/Omnifood/new-version/HTML-Fundamentals/style/main-style-flot.css
+++ b/Omnifood/new-version/HTML-Fundamentals/style/main-style-flot.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   position: relative;
@@ -51,6 +52,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 p {
   font-size: 22px;
@@ -83,6 +85,7 @@ footer p {
 
 .relate-list {
   list-style: none;
+  margin-left: 0;
 }
 
 .main-header {
@@ -95,8 +98,7 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /* .first-li {
