--- a/frontend-zero-to-hero/css/main.css
+++ b/frontend-zero-to-hero/css/main.css
@@ -55,3 +55,33 @@ li{
 .main-header{
   background-color: #f7f7f7;
 }
+aside{
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+li:first-child{
+  font-weight: bold;
+}
+li:last-child{
+  font-style: italic;
+}
+li:nth-child(2){
+/* color: red; */
+}
+a:link{
+  color: #1098ad;
+  text-decoration: none;
+}
+a:visited{
+  color: #1098ad;
+}
+a:hover{
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orange;
+}
+a:active{
+  background-color: black;
+  font-style: italic;
+}
