--- a/frontend-zero-to-hero/css/main.css
+++ b/frontend-zero-to-hero/css/main.css
@@ -1,4 +1,19 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 
+body{
+  color: #444;
+  font-family: sans-serif;
+  margin: 0px;
+}
+.main-header{
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  /* padding-left: 40px;
+  padding-right: 40px; */
+}
 
 h1,h2,h3,h4,p,li{
   font-family: sans-serif;
@@ -8,11 +23,9 @@ h1,h2,h3{
   color: #1098ad;
 }
 h1{
-  color: blue;
   font-size: 26px;
   text-transform: uppercase;
   font-style: italic;
-  
 }
 h2{
   font-size: 40px;
@@ -31,6 +44,10 @@ p{
 }
 li{
   font-size: 20px;
+  margin-bottom: 10px;
+}
+li:last-child{
+margin-bottom: 0px;
 }
 /* footer p{
   font-size: 16px;
@@ -52,9 +69,7 @@ li{
 .related{
   list-style: none;
 }
-.main-header{
-  background-color: #f7f7f7;
-}
+
 aside{
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
