--- a/frontend-zero-to-hero/css/challenge.css
+++ b/frontend-zero-to-hero/css/challenge.css
@@ -1,9 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     font-family: sans-serif;
     line-height: 1.4;
 }
 .container{
     border: 4px solid black;
+    width: 825px;
+    margin: 50px auto;
 }
 .challenge-header{
     font-weight: bold;
@@ -12,19 +18,24 @@ body{
     font-family: sans-serif;
     background-color: #f7f7f7;
     font-size: 22px;
+    height: 60px;
+    padding-top: 15px;
 }
 .price{
     font-weight: bold;
     font-size: 24px;
+    margin-bottom: 20px;
 }
 .shipping{
     font-size: 12px;
     text-transform: uppercase;
     color: #5f5e5e;
     font-weight: bold;
+    margin-bottom: 20px;
 }
 .more-info:link{
     color: black;
+    margin-bottom: 20px;
 }
 .more-info:visited{
     color: black;
@@ -35,6 +46,8 @@ body{
 .product-details{
     text-transform: uppercase;
     font-weight: bold;
+    margin-bottom: 25px;
+    margin-top: 30px;
 }
 .cart-button{
     background-color: black;
@@ -42,13 +55,26 @@ body{
     text-transform: uppercase;
     font-weight: bold;
     font-size: 20px;
+    padding: 15px;
+    width: 100%;
 }
 .cart-button:hover{
     background-color:white;
     border: none;
     color:black; 
+    border-top: 4px solid;
 }
 .detail-list{
     list-style: square;
     font-size: 16px;
+    margin-left: 30px;
+}
+li{
+    margin-bottom: 10px;
+}
+li:last-child{
+    margin-bottom: 0px;
+}
+.details-text{
+
 }
