--- a/frontend-zero-to-hero/css/challenge.css
+++ b/frontend-zero-to-hero/css/challenge.css
@@ -5,11 +5,13 @@
 body{
     font-family: sans-serif;
     line-height: 1.4;
+    position: relative;
 }
 .container{
     border: 4px solid black;
     width: 825px;
     margin: 50px auto;
+    position: relative; 
 }
 .challenge-header{
     font-weight: bold;
@@ -18,7 +20,7 @@ body{
     font-family: sans-serif;
     background-color: #f7f7f7;
     font-size: 22px;
-    height: 60px;
+    height: 45px;
     padding-top: 15px;
 }
 .price{
@@ -39,9 +41,13 @@ body{
 }
 .more-info:visited{
     color: black;
+    margin-bottom: 20px;
 }
 .more-info:hover .more-info:active{
     text-decoration: none;
+    margin-bottom: 30px;
+    display: inline-block;
+
 }
 .product-details{
     text-transform: uppercase;
@@ -76,5 +82,68 @@ li:last-child{
     margin-bottom: 0px;
 }
 .details-text{
-
+/* margin-bottom: 20px; */
+}
+/* .container::before{
+    content: "sale";
+    text-transform: uppercase;
+    display: inline-block;
+    font-weight: bold;
+    top: -8px;
+    left: 211px;
+    position: absolute;
+    background-color: red;
+    padding: 4px 12px;
+} */
+.sale{
+    background-color: red; 
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    /* text-align: center; */
+    font-size: 12px;
+    display: inline-block; 
+    top: -18px;
+    left: -34px;
+    position: absolute;
+    padding: 7px 15px;
+}
+.black-color-box{
+    background-color: black;
+    height: 20px;
+    width: 20px;
+}
+.red-color-box{
+    background-color:red;
+    height: 20px;
+    width: 20px;
+    float: right;
+    position: absolute;
+    margin-left: 38px;
+    margin-top: -19px;
+}
+.colors{
+margin-top: 20px;
+}
+.color{
+    background-color: #000;
+    width: 22px;
+    min-height: 22px;
+    display: inline-block;
+    margin-right: 10px;
+}
+.color-blue{
+    background-color: #2f6ee2;
+}
+.color-red{
+    background-color: #ec2f2f;
+}
+.color-yellow{
+background-color: #f0bf1e;
+}
+.color-green{
+background-color: #90cc20;
+}
+.color-brown{
+background-color: #885214;
 }
