--- a/frontend-zero-to-hero/css/challenge.css
+++ b/frontend-zero-to-hero/css/challenge.css
@@ -1,17 +1,18 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family: sans-serif;
     line-height: 1.4;
-    position: relative;
+    /* position: relative; */
 }
 .container{
     border: 4px solid black;
     width: 825px;
     margin: 50px auto;
-    position: relative; 
+    position: relative;  
 }
 .challenge-header{
     font-weight: bold;
@@ -27,6 +28,8 @@ body{
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 20px;
+    float: left; 
+    /* display: inline-block; */
 }
 .shipping{
     font-size: 12px;
@@ -34,6 +37,9 @@ body{
     color: #5f5e5e;
     font-weight: bold;
     margin-bottom: 20px;
+    float: right; 
+    margin-top: 10px;
+    /* display: inline-block; */
 }
 .more-info:link{
     color: black;
@@ -83,6 +89,7 @@ li:last-child{
 }
 .details-text{
 /* margin-bottom: 20px; */
+clear: both;
 }
 /* .container::before{
     content: "sale";
@@ -146,4 +153,21 @@ background-color: #90cc20;
 }
 .color-brown{
 background-color: #885214;
+}
+.emoji{
+display: inline-block;
+}
+.hero-image{
+    float: left;
+    margin-right: 40px;
+}
+.price-details{
+    width: 243px;
+    float: left;
+    margin-right: 40px;
+    margin-top: 26px;
+}
+.pro-details-div{
+float: left;
+width: 243px;
 }
