--- a/frontend-zero-to-hero/css/main-float.css
+++ b/frontend-zero-to-hero/css/main-float.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
   }
   
   body{
@@ -10,30 +11,19 @@
     position: relative;
   }
   .container{
-    width: 800px;
-    /* margin-left: auto;
-    margin-right: auto; */
+    width: 1200px;
     margin: 0 auto;
     position: relative;
   }
   .main-header{
-    /* background-color: #f7f7f7; */
-    background-color: red;
+    background-color: #f7f7f7; 
     padding: 20px 40px;
     margin-bottom: 60px;
-    /* padding-left: 40px;
-    padding-right: 40px; */
-    /* height: 80px; */
-  
   }
   nav{
     font-size: 18px;
   }
   nav a:link{
-    /* background-color: orangered;
-    margin: 20px;
-    padding: 20px;
-    display: block; */
     margin-top: 10px;
     margin-right: 30px;
     display: inline-block;
@@ -43,6 +33,17 @@
   }
   article{
     margin-bottom: 60px;
+    width: 825px;
+    float: left;
+  }
+  aside{
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
+    padding: 50px 40px;
+    width: 300px;
+    float: right;
+    box-sizing: border-box;
   }
   h1,h2,h3,h4,p,li{
     font-family: sans-serif;
@@ -69,6 +70,7 @@
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 20px;
   }
   p{
     font-size: 22px;
@@ -82,17 +84,11 @@
   li{
     font-size: 20px;
     margin-bottom: 10px;
-    /* display: inline; */
   }
   li:last-child{
   margin-bottom: 0px;
   }
-  /* footer p{
-    font-size: 16px;
-  } */
-  /* article header p{
-    font-style: italic;
-  } */
+  
   #author{
     font-style: italic;
     font-size: 18px;
@@ -114,26 +110,17 @@
   }
   .related{
     list-style: none;
+    margin-left: 0;
   }
   
-  aside{
-    background-color: #f7f7f7;
-    border-top: 5px solid #1098ad;
-    border-bottom: 5px solid #1098ad;
-    /* padding-top: 50px;
-    padding-bottom: 50px; */
-    padding: 50px 0;
-    width: 500px;
-  }
+ 
   li:first-child{
     font-weight: bold;
   }
   li:last-child{
     font-style: italic;
   }
-  li:nth-child(2){
-  /* color: red; */
-  }
+  
   a:link{
     color: #1098ad;
     text-decoration: none;
@@ -162,8 +149,6 @@
     padding: 20px;
     cursor: pointer;
     position: absolute;
-    /* top:0;
-    left: 0; */
     bottom: 50px;
     right: 50px;
   }
@@ -171,17 +156,8 @@
     font-style: normal;
     margin-right: 5px;
   }
-  h2::first-letter{
-    /* font-size: 80px; */
-  }
-  p::first-line{
-    /* color: red; */
-  }
-  h3 + p::first-line{
-    /* color: red; */
-  }
+  
   h2{
-    /* background-color: orange; */
     position: relative;
   }
   h2::after{
@@ -204,4 +180,13 @@
   }
   .clear{
 clear: both;
+  }
+  .clearfix::after{
+    clear: both;
+    content: '';
+    display: block;
+  }
+ 
+  footer{
+    clear: both;
   }
