--- a/frontend-zero-to-hero/css/main-flex.css
+++ b/frontend-zero-to-hero/css/main-flex.css
@@ -34,6 +34,8 @@ nav a:link:last-child {
 }
 article {
   margin-bottom: 60px;
+  /* flex: 0 0 825px; */
+  flex: 1;
 }
 h1,
 h2,
@@ -88,18 +90,22 @@ li:last-child {
 .author-box {
   display: flex;
   align-items: center;
+  margin-bottom: 15px;
 }
 #author {
   font-style: italic;
   font-size: 18px;
   margin-bottom: 0;
+  margin-left: 15px;
 }
 #copyright {
   font-size: 16px;
 }
 .related-author {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: normal;
+  margin-bottom: 0;
+  font-style: italic;
 }
 .related {
   list-style: none;
@@ -110,7 +116,8 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 0;
-  width: 500px;
+  /* width: 300px; */
+  flex: 0 0 300px;
 }
 li:first-child {
   font-weight: bold;
@@ -171,4 +178,21 @@ h2::after {
   position: absolute;
   top: -10px;
   right: -25px;
+}
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+}
+.row {
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
 }
