--- a/frontend-zero-to-hero/css/main-float.css
+++ b/frontend-zero-to-hero/css/main-float.css
@@ -1,192 +1,199 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body{
-    color: #444;
-    font-family: sans-serif;
-    margin: 0px;
-    position: relative;
-  }
-  .container{
-    width: 1200px;
-    margin: 0 auto;
-    position: relative;
-  }
-  .main-header{
-    background-color: #f7f7f7; 
-    padding: 20px 40px;
-    margin-bottom: 60px;
-  }
-  nav{
-    font-size: 18px;
-  }
-  nav a:link{
-    margin-top: 10px;
-    margin-right: 30px;
-    display: inline-block;
-  }
-  nav a:link:last-child{
-    margin-right: 0;
-  }
-  article{
-    margin-bottom: 60px;
-    width: 825px;
-    float: left;
-  }
-  aside{
-    background-color: #f7f7f7;
-    border-top: 5px solid #1098ad;
-    border-bottom: 5px solid #1098ad;
-    padding: 50px 40px;
-    width: 300px;
-    float: right;
-    box-sizing: border-box;
-  }
-  h1,h2,h3,h4,p,li{
-    font-family: sans-serif;
-    color: #444;
-  }
-  h1,h2,h3{
-    color: #1098ad;
-  }
-  h1{
-    font-size: 26px;
-    text-transform: uppercase;
-    font-style: italic;
-  }
-  h2{
-    font-size: 40px;
-    margin-bottom: 30px;
-  }
-  h3{
-    font-size: 30px;
-    margin-bottom: 20px;
-    margin-top: 40px;
-  }
-  h4{
-    font-size: 20px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  p{
-    font-size: 22px;
-    line-height: 1.5;
-    margin-bottom: 15px;
-  }
-  ul,ol{
-    margin-left: 50px;
-    margin-bottom: 20px;
-  }
-  li{
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  li:last-child{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  color: #444;
+  font-family: sans-serif;
+  margin: 0px;
+  position: relative;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+}
+nav {
+  font-size: 18px;
+}
+nav a:link {
+  margin-top: 10px;
+  margin-right: 30px;
+  display: inline-block;
+}
+nav a:link:last-child {
+  margin-right: 0;
+}
+article {
+  margin-bottom: 60px;
+  width: 825px;
+  float: left;
+}
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 40px;
+  width: 300px;
+  float: right;
+  box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+p,
+li {
+  font-family: sans-serif;
+  color: #444;
+}
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+h1 {
+  font-size: 26px;
+  text-transform: uppercase;
+  font-style: italic;
+}
+h2 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+h3 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 20px;
+}
+p {
+  font-size: 22px;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+li {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+li:last-child {
   margin-bottom: 0px;
-  }
-  
-  #author{
-    font-style: italic;
-    font-size: 18px;
-  }
-  .author-img{
-      float: left;
-  }
-  .author{
-    float: left;
-    padding-left: 80px;
-    margin-top: 10px;
-  }
-  #copyright{
-    font-size: 16px;
-  }
-  .related-author{
-    font-size: 18px;
-    font-weight: bold;
-  }
-  .related{
-    list-style: none;
-    margin-left: 0;
-  }
-  
- 
-  li:first-child{
-    font-weight: bold;
-  }
-  li:last-child{
-    font-style: italic;
-  }
-  
-  a:link{
-    color: #1098ad;
-    text-decoration: none;
-  }
-  a:visited{
-    color: #1098ad;
-  }
-  a:hover{
-    color: orangered;
-    font-weight: bold;
-    text-decoration: underline orange;
-  }
-  a:active{
-    background-color: black;
-    font-style: italic;
-  }
-  .post-header{
-    margin-bottom: 40px;
-  }
-  .post-img{
-    width: 100%;
-    height: auto;
-  }
-  button{
-    font-size: 22px;
-    padding: 20px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
-  }
-  h1::first-letter{
-    font-style: normal;
-    margin-right: 5px;
-  }
-  
-  h2{
-    position: relative;
-  }
-  h2::after{
-    content: "TOP";
-    background-color: #ffe70e;
-    color: #000;
-    font-size: 16px;
-    font-weight: bold;
-    display: inline-block;
-    padding: 5px 10px;
-    position: absolute;
-    top: -10px;
-    right: -25px;
-  }
-  h1{
-      float: left;
-  }
-  nav{
-      float: right;
-  }
-  .clear{
-clear: both;
-  }
-  .clearfix::after{
-    clear: both;
-    content: '';
-    display: block;
-  }
- 
-  footer{
-    clear: both;
-  }
+}
+
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+.author-img {
+  float: left;
+}
+.author {
+  float: left;
+  padding-left: 80px;
+  margin-top: 10px;
+}
+#copyright {
+  font-size: 16px;
+}
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+.related {
+  list-style: none;
+  margin-left: 0;
+}
+
+li:first-child {
+  font-weight: bold;
+}
+li:last-child {
+  font-style: italic;
+}
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+a:visited {
+  color: #1098ad;
+}
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orange;
+}
+a:active {
+  background-color: black;
+  font-style: italic;
+}
+.post-header {
+  margin-bottom: 40px;
+}
+.post-img {
+  width: 100%;
+  height: auto;
+}
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h2 {
+  position: relative;
+}
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+h1 {
+  float: left;
+}
+nav {
+  float: right;
+}
+.clear {
+  clear: both;
+}
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+footer {
+  clear: both;
+}
