--- a/frontend-zero-to-hero/css/sush.css
+++ b/frontend-zero-to-hero/css/sush.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 .container {
   display: flex;
@@ -9,11 +10,21 @@
   text-align: left;
   font-size: 60px;
   width: 100%;
-  height: 500px;
+  height: 100%;
   font-weight: bold;
   background-color: #1a1919;
   color: wheat;
   flex-direction: row;
+}
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image-container-dual-image {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .hero-image-container-text {
   display: flex;
@@ -28,8 +39,7 @@
   color: rgb(20, 236, 20);
   font-size: 120px;
 }
-
-.hero-image-container-suschi-image {
+.hero-image-container-suschi-image-two {
   display: flex;
   align-content: flex-start;
   justify-content: flex-start;
@@ -39,6 +49,36 @@
   width: 600px;
   height: 600px;
 }
+.hero-image-container-suschi-image-two {
+  display: flex;
+  align-content: flex-start;
+  justify-content: flex-start;
+  border: 4px solid rgb(193, 233, 213);
+  border-radius: 20px;
+  background-color: rgb(143, 245, 194);
+  width: 600px;
+  height: 728px;
+}
+
+.hero-image-container-suschi-image-three {
+  display: flex;
+  align-content: flex-start;
+  justify-content: flex-start;
+  border: 4px solid rgb(193, 233, 213);
+  border-radius: 20px;
+  background-color: rgb(143, 245, 194);
+  width: 600px;
+  height: 728px;
+}
 .suchi-image-one {
   width: 600px;
+}
+.suchi-image-two,
+.suchi-image-three {
+  width: 600px;
+  height: 728px;
+}
+.main-container {
+  display: flex;
+  justify-content: center;
 }
