--- a/frontend-zero-to-hero/css/practice-grid.css
+++ b/frontend-zero-to-hero/css/practice-grid.css
@@ -274,3 +274,19 @@
   padding: 20px 0;
   font-size: 30px;
 }
+.grid-container-grid-column {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-gap: 10px;
+  padding: 10x;
+  background-color: royalblue;
+}
+.grid-container-grid-column > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+.item1 {
+  grid-column: 1/5;
+}
