--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -31,7 +31,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -55,7 +55,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -65,7 +65,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
@@ -80,9 +80,13 @@ img {
 }
 
 /* FEATURES */
-.features-icon {
-}
 
+.feature-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 24px;
+}
 .features-title {
   margin-bottom: 16px;
   font-size: 20px;
@@ -116,6 +120,10 @@ img {
   margin-bottom: 24px;
   line-height: 1.7;
   font-size: 18px;
+  color: #e6fcf5;
+}
+.testimonial-author {
+  color: #96f2d7;
 }
 img {
   border-radius: 12px;
@@ -131,7 +139,7 @@ img {
   border-bottom-right-radius: 0;
 }
 .chair-box {
-  padding: 24px;
+  padding: 32px;
 }
 
 h3 {
@@ -141,26 +149,24 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
   margin-bottom: 0;
 }
 
-.chair-icon {
-}
-
 .chair-price {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
 }
 
@@ -193,12 +199,7 @@ footer {
   font-size: 14px;
   padding: 8px 12px;
 }
-.feature-icon {
-  stroke: #087f5b;
-  width: 32px;
-  height: 32px;
-  margin-bottom: 16px;
-}
+
 .chair-icon {
   stroke: #087f5b;
   height: 24px;
