--- a/frontend-zero-to-hero/css/sush.css
+++ b/frontend-zero-to-hero/css/sush.css
@@ -7,6 +7,16 @@ body {
   background-color: #000;
   font-family: "Source Sans Pro";
 }
+.we-wish-header {
+  color: azure;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+  font-weight: 800;
+  box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+  border-radius: 20px;
+}
 
 .container {
   width: 1573px;
@@ -63,7 +73,7 @@ h2 {
 }
 .love {
   display: grid;
-  /* box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);  */
+  box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
   box-shadow: 0 20px 30px 0 #63e6be;
   align-items: center;
   justify-content: center;
@@ -87,8 +97,194 @@ h2 {
 .affection-text,
 .care-text {
   text-align: center;
-  color: #868e96;
+  color: #f3f5f7;
   font-family: "Oooh Baby", cursive;
   font-size: 80px;
   font-weight: 800;
+}
+
+@media (max-width: 360px) {
+  .we-wish-header {
+    color: azure;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    font-size: 93px;
+    font-weight: 800;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  .container {
+    width: 360px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 343px;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+  }
+  h1 {
+    color: #e6e6e7;
+    font-size: 34px;
+    font-weight: 700;
+    margin-bottom: 48px;
+    padding: 10px;
+  }
+  h2 {
+    color: #e6e6e7;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 12px;
+  }
+  .hero-section {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  img {
+    width: 340px;
+  }
+  .sub-hero {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    margin-bottom: 100px;
+    border-radius: 20px;
+    row-gap: 57px;
+  }
+}
+
+@media (max-width: 411px) {
+  .we-wish-header {
+    color: azure;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    font-size: 93px;
+    font-weight: 800;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  .container {
+    width: 411px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 343px;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+  }
+  h1 {
+    color: #e6e6e7;
+    font-size: 34px;
+    font-weight: 700;
+    margin-bottom: 48px;
+    padding: 10px;
+  }
+  h2 {
+    color: #e6e6e7;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 12px;
+  }
+  .hero-section {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  img {
+    width: 340px;
+  }
+  .sub-hero {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    margin-bottom: 100px;
+    border-radius: 20px;
+    row-gap: 57px;
+  }
+  .wishes_text {
+    box-shadow: 0 20px 30px 0 rgba(250, 44, 44, 0.7);
+    padding-left: 24px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+  }
+}
+
+@media (max-width: 414px) {
+  .we-wish-header {
+    color: azure;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    font-size: 93px;
+    font-weight: 800;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  .container {
+    width: 411px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 343px;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+  }
+  h1 {
+    color: #e6e6e7;
+    font-size: 34px;
+    font-weight: 700;
+    margin-bottom: 48px;
+    padding: 10px;
+  }
+  h2 {
+    color: #e6e6e7;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 12px;
+  }
+  .hero-section {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    border-radius: 20px;
+  }
+  img {
+    width: 340px;
+  }
+  .sub-hero {
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 20px 30px 0 rgb(225 92 92 / 70%);
+    margin-bottom: 100px;
+    border-radius: 20px;
+    row-gap: 57px;
+  }
+  .wishes_text {
+    box-shadow: 0 20px 30px 0 rgba(250, 44, 44, 0.7);
+    padding-left: 24px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+  }
 }
