--- a/Components/carouselComponent.html
+++ b/Components/carouselComponent.html
@@ -24,15 +24,14 @@
       <img class="" src="maria.jpg" alt="Maria " />
       <blockquote class="testimonial">
         <p class="testimonial-text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
+          "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
           veritatis quas fugit, nemo ipsam reprehenderit minus fuga, ratione
-          magnam pariatur rem asperiores quos quo eaque quibusdam! At sit
-          perspiciatis doloremque?
+          magnam pariatur rem asperiores"
         </p>
         <p class="testimonial-autor">Maria de Almeida</p>
         <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
       </blockquote>
-      <button class="btn">
+      <button class="btn btn-left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="btn-icon"
@@ -48,7 +47,7 @@
           />
         </svg>
       </button>
-      <button class="btn">
+      <button class="btn btn-right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="btn-icon"
@@ -64,6 +63,12 @@
           />
         </svg>
       </button>
+      <div class="dots">
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+      </div>
     </div>
   </body>
 </html>
