--- a/Components/carouselComponent.css
+++ b/Components/carouselComponent.css
@@ -31,10 +31,13 @@ body {
   color: #fff;
   padding: 32px;
   padding-left: 82px;
+  padding-right: 48px;
+  padding: 32px 48px 32px 82px;
   display: flex;
   align-items: center;
   gap: 86px;
-  box-sizing: 0 12px 32px rgba(0, 0, 0, 0.1);
+  box-sizing: 0 12px 32px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 img {
   height: 200px;
@@ -59,6 +62,50 @@ img {
   color: #c3fae8;
 }
 .btn {
+  background-color: #fff;
+  border: none;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
+.btn-left {
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%);
+}
+.btn-right {
+  top: 50%;
+  right: 0;
+  transform: translate(50%, -50%);
+}
+
 .btn-icon {
+  height: 24px;
+  width: 24px;
+  stroke: #087f5b;
+}
+.dots {
+  left: 50%;
+  position: absolute;
+  bottom: 0;
+  transform: translate(50%, 32px);
+  display: flex;
+  gap: 12px;
+}
+.dot {
+  height: 12px;
+  width: 12px;
+  background-color: #fff;
+  border: 2px solid #087f5b;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.dot-first {
+  background-color: #087f5b;
 }
