--- a/Components/paginationcomponent.html
+++ b/Components/paginationcomponent.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Carousel Components</title>
+    <title>Pagination Component</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,26 +15,16 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="./carouselComponent.css"
+      href="./paginationcomponent.css"
     />
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="carousel">
-      <img class="" src="maria.jpg" alt="Maria " />
-      <blockquote class="testimonial">
-        <p class="testimonial-text">
-          "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
-          veritatis quas fugit, nemo ipsam reprehenderit minus fuga, ratione
-          magnam pariatur rem asperiores"
-        </p>
-        <p class="testimonial-autor">Maria de Almeida</p>
-        <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
-      </blockquote>
-      <button class="btn btn-left">
+    <div class="pagination-container">
+      <div class="icon-left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="btn-icon"
+          class="btn btn-left"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -46,11 +36,19 @@
             d="M15 19l-7-7 7-7"
           />
         </svg>
-      </button>
-      <button class="btn btn-right">
+      </div>
+      <div class="page page-one">1</div>
+      <div class="page page-two">2</div>
+      <div class="page page-one">3</div>
+      <div class="page page-two">4</div>
+      <div class="page page-one">5</div>
+      <div class="page page-two">6</div>
+      <div class="page page-one">..</div>
+      <div class="page page-two">24</div>
+      <div class="icon-right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="btn-icon"
+          class="btn btn-right"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -62,12 +60,6 @@
             d="M9 5l7 7-7 7"
           />
         </svg>
-      </button>
-      <div class="dots">
-        <button class="dot dot-first">&nbsp;</button>
-        <button class="dot">&nbsp;</button>
-        <button class="dot">&nbsp;</button>
-        <button class="dot">&nbsp;</button>
       </div>
     </div>
   </body>
