--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -38,9 +38,78 @@ body {
   font-weight: 400;
   color: #555;
 }
+/* ===================COMMON CODE============================ */
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  padding: 0 3.2rem !important;
+  margin: 0 auto;
+}
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* ===================COMMON CODE============================ */
+.logo {
+  height: 2.2rem;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 .hero {
   display: grid;
@@ -48,6 +117,7 @@ body {
   gap: 9.6rem;
   max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
   align-items: center;
 }
 
@@ -137,6 +207,24 @@ body {
   color: #cf711f;
   font-weight: 700;
 }
+
+/* .section-how div div {
+  padding: 100px;
+  font-size: 50px;
+  background-color: #333;
+} */
+/* .section-how div:nth-child(1) {
+  background-color: aqua;
+}
+.section-how div:nth-child(2) {
+  background-color: blue;
+}
+.section-how div:nth-child(3) {
+  background-color: violet;
+}
+.section-how div:nth-child(4) {
+  background-color: yellow;
+} */
 /* .test {
   /* width: 1000px; */
 /* max-width: 1000px; */
