--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -47,7 +47,6 @@ body {
 }
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
 }
 
 .grid {
@@ -76,6 +75,7 @@ body {
   height: 9.6rem;
   padding: 0 4.8rem;
 }
+
 .main-nav-list {
   list-style: none;
   display: flex;
@@ -121,15 +121,32 @@ body {
   align-items: center;
 }
 
-.heading-primary {
-  font-size: 5.2rem;
+.heading-primary,
+.heading-secondary {
   font-weight: 700;
-  line-height: 1.05;
   color: #333;
   letter-spacing: -0.5px;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
   margin-bottom: 3.2rem;
 }
 
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+}
+.subheading {
+  color: black;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
 .hero-img {
   width: 100%;
 }
@@ -206,6 +223,9 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+.step-img {
+  width: 50%;
 }
 
 /* .section-how div div {
