--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -139,18 +139,18 @@
         </div>
       </section>
       <section class="section-meals">
-        <div class="container">
-          <span class="subheading"> Sample meals</span>
+        <div class="container center-text">
+          <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
-        <div class="container grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom--md">
           <div class="meal">
             <img src="../img/meals/meal-1.jpg" alt="" class="meal-img" />
             <div class="meal-content">
               <div class="meal-tags">
-                <span class="tag">Vegetarian</span>
+                <span class="tag tag--vegetarian">Vegetarian</span>
               </div>
 
               <p class="meal-title">Japanese Gyozas</p>
@@ -161,7 +161,7 @@
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="restaurant"></ion-icon>
-                  <span>NutriScore &reg; <strong>74</strong> </span>
+                  <span>NutriScore &reg; <strong>174</strong> </span>
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="star-half"></ion-icon>
@@ -175,7 +175,8 @@
 
             <div class="meal-content">
               <div class="meal-tags">
-                <span class="tag">Vegan and Paleo</span>
+                <span class="tag tag--vegan">Vegan</span>
+                <span class="tag tag--paleo"> Paleo</span>
               </div>
 
               <p class="meal-title">Avocado Salad</p>
@@ -195,7 +196,199 @@
               </ul>
             </div>
           </div>
-          <div class="list">Meal List</div>
+          <div class="diets">
+            <h3 class="heading-tertiary">Works with any diet</h3>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Vegan</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Keto</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span> Kid-friendly</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="container all-recipes">
+          <a href="#" class="link">See all recipes &rarr;</a>
+        </div>
+      </section>
+      <section class="section-testimonials">
+        <div class="testimonials-container">
+          <span class="subheading">Testimonials</span>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+          <div class="testimonials">
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="../img/customers/dave.jpg"
+                alt=""
+              />
+              <blockquote class="testimonial-text">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="testimonial-name">&mdash; Dave Bryson</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="../img/customers/ben.jpg"
+                alt=""
+              />
+              <blockquote class="testimonial-text">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Ben Hadley</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="../img/customers/steve.jpg"
+                alt=""
+              />
+              <blockquote class="testimonial-text">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Steve Miller</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="../img/customers/hannah.jpg"
+                alt=""
+              />
+              <blockquote class="testimonial-text">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="testimonial-name">&mdash; Hannah Smith</p>
+            </figure>
+          </div>
+        </div>
+        <div class="gallery">
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-1.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-2.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-3.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-4.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-5.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-6.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-7.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-8.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-9.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-10.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-11.jpg"
+              alt=""
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              class="gallery-img"
+              src="../img/gallery/gallery-12.jpg"
+              alt=""
+            />
+          </figure>
+        </div>
+      </section>
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">Eat well without breaking bank</h2>
+        </div>
+        <div class="container grid grid--2-cols">
+          <div class="pricing-plan">Plan1</div>
+          <div class="pricing-plan">Plan2</div>
         </div>
       </section>
     </main>
