--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -562,6 +562,47 @@ strong {
   line-height: 1.6;
   text-align: center;
 }
+
+/* ======================CTA=============================== */
+.section-cta {
+  padding-left: 9.6rem 0;
+}
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  /* background-image: linear-gradient(red, #e67e22); */
+  /* background-image: linear-gradient(90deg, red, #e67e22); */
+  /* background-image: linear-gradient(to right, red, #e67e22); */
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  height: 50rem;
+  overflow: hidden;
+}
+.cta-text-box {
+  color: #45260a;
+  padding: 6.4rem;
+}
+.cta .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 /* .section-how div div {
   padding: 100px;
   font-size: 50px;
