--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -29,7 +29,10 @@
   </head>
   <body>
     <header class="header">
-      <img src="../img/omnifood-logo.png" alt="" class="logo" />
+      <a href="#">
+        <img src="../img/omnifood-logo.png" alt="" class="logo" />
+      </a>
+
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a href="#" class="main-nav-link">Section 1</a></li>
@@ -538,5 +541,64 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--5-cols">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img src="../img/omnifood-logo.png" alt="" class="logo" />
+          </a>
+          <ul class="social-links">
+            <li>
+              <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+            </li>
+            <li>
+              <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+            </li>
+            <li>
+              <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy; 2028 by Omnifood,Inc. All right Received
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p>
+              <a href="tel:415-201-6370">415-201-6370</a><br />
+              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            </p>
+          </address>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Accounts</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sig in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
